--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <link href="https://cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css" rel="stylesheet">
-    <title>medixline</title>
+    <title>MedixLine</title>
   </head>
   <body>
     <div id="root"></div>
